{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 136,
  "lineage": "c5974e66-b604-7236-bd0f-339f79a432ff",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_vm_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/publicIPAddresses/pip-dev-mywebapp-web01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.78.190.138",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-dev-mywebapp-web01",
            "resource_group_name": "rg-dev-mywebapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_compute_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-allow-22-80-443",
            "location": "centralus",
            "name": "nsg-allow-22-80-443",
            "resource_group_name": "rg-dev-mywebapp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 102,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-db-subnet",
            "location": "centralus",
            "name": "nsg-db-subnet",
            "resource_group_name": "rg-dev-mywebapp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-mysql",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_compute_subnet_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-allow-22-80-443/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "nsg-allow-22-80-443",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-dev-mywebapp",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_compute_subnet",
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-allow-22-80-443/securityRules/allow-https",
            "name": "allow-https",
            "network_security_group_name": "nsg-allow-22-80-443",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "rg-dev-mywebapp",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_compute_subnet",
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-allow-22-80-443/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-allow-22-80-443",
            "priority": 102,
            "protocol": "*",
            "resource_group_name": "rg-dev-mywebapp",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_compute_subnet",
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_db_subnet_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mysql",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-db-subnet/securityRules/allow-mysql",
            "name": "allow-mysql",
            "network_security_group_name": "nsg-db-subnet",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev-mywebapp",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_db_subnet",
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_webapp_vnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/publicIPAddresses/pip-bastion-dev",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.119.65.89",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-bastion-dev",
            "resource_group_name": "rg-dev-mywebapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets_webapp_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureBastionSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev-mywebapp",
            "virtual_network_name": "vnet-dev-mywebapp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp",
            "module.network.azurerm_virtual_network.vnet_webapp"
          ]
        },
        {
          "index_key": "compute-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/compute-subnet",
            "name": "compute-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev-mywebapp",
            "virtual_network_name": "vnet-dev-mywebapp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp",
            "module.network.azurerm_virtual_network.vnet_webapp"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev-mywebapp",
            "virtual_network_name": "vnet-dev-mywebapp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp",
            "module.network.azurerm_virtual_network.vnet_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_compute_subnet_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/compute-subnet",
            "network_security_group_id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-allow-22-80-443",
            "subnet_id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/compute-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_compute_subnet",
            "module.network.azurerm_resource_group.rg_webapp",
            "module.network.azurerm_subnet.subnets_webapp_vnet",
            "module.network.azurerm_virtual_network.vnet_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_db_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-db-subnet",
            "subnet_id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/db-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg_db_subnet",
            "module.network.azurerm_resource_group.rg_webapp",
            "module.network.azurerm_subnet.subnets_webapp_vnet",
            "module.network.azurerm_virtual_network.vnet_webapp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fdf1638d-9a1a-4877-a157-ef2a2802ae5e",
            "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp",
            "location": "centralus",
            "name": "vnet-dev-mywebapp",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-dev-mywebapp",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/compute-subnet",
                "name": "compute-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-allow-22-80-443"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/virtualNetworks/vnet-dev-mywebapp/subnets/db-subnet",
                "name": "db-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/2c58f186-d2f5-4a88-b700-e54dd3526d6d/resourceGroups/rg-dev-mywebapp/providers/Microsoft.Network/networkSecurityGroups/nsg-db-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.rg_webapp"
          ]
        }
      ]
    }
  ]
}